# exqudens-cpp-embedded-usb

./: CMakeLists.txt  CMakePresets.json  STM32H7A3XX_FLASH.ld  exqudens-cpp-embedded-usb.ioc  flags.cmake  name-version.txt  readme.md  st.ioc  stm-cube-script.txt.in  test-conanfile.py
cmake/: util.cmake
src/main/c/exqudens/embedded/usb/: exqudens_embedded.h
src/main/c/exqudens/embedded/usb/Core/Src/: main.c
src/main/c/exqudens/embedded/usb/Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Src/: usbd_cdc.c
src/main/c/exqudens/embedded/usb/USB_DEVICE/App/: usbd_cdc_if.c  usbd_desc.c
src/main/c/exqudens/embedded/usb/hal/Core/Src/: main.c
src/main/c/exqudens/embedded/usb/hal/Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Src/: usbd_cdc.c
src/main/c/exqudens/embedded/usb/hal/USB_DEVICE/App/: usbd_cdc_if.c
src/main/c/st/Core/Inc/: main.h
src/main/c/st/Core/Src/: gpio.c  main.c  stm32h7xx_it.c
src/main/c/st/USB_DEVICE/App/: usbd_cdc_if.h  usbd_desc.c
src/main/cpp/: main.cpp
src/main/cpp/exqudens/embedded/usb/: Application.cpp  Application.hpp  Hardware.cpp  Hardware.hpp  HardwareStub.cpp  IHardware.hpp
src/main/cpp/exqudens/embedded/usb/hal/: Hardware.cpp  Hardware.hpp  HardwareUtils.cpp  HardwareUtils.hpp  IHardware.hpp
src/test/cpp/: TestApplication.cpp
src/test/cpp/unit/: FunctionalUnitTests.hpp
src/test/resources/vscode/: command-variable-launch.json  launch.json
